[package]
name = "multithread_raycaster_game"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 2 # Use better optimizations.
debug = true
debug-assertions = true
overflow-checks = true
incremental = true


[dependencies]
rayon = "1.7"
winit = "0.28"
softbuffer = "0.2"
image = "0.24"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["json", "local-time"]}
profiling = {version = "1.0", features = ["profile-with-tracy"]}
tracing-tracy = "0.10"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "raycasting_benchmarks"
harness = false