[package]
name = "multithread_raycaster_game"
version = "0.1.4"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 2 # Use better optimizations.
debug = true
debug-assertions = true
overflow-checks = true
incremental = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1

[features]
debug = ["profiling", "tracing", "tracing-subscriber", "tracing-tracy"]


[dependencies]
rayon = "1.7"
winit = "0.28"
softbuffer = "0.3"
image = {version = "0.24",features = ["png"], default-features = false}
fontdue = "0.7"
packed_simd = "0.3"
clap = {version = "4.3", features = ["cargo"]}
rodio = {version = "0.17.1",features = ["mp3"], default-features = false}
tracing = {version = "0.1", optional = true}
tracing-subscriber = {version = "0.3", features = ["json", "local-time"], optional = true}
profiling = {version = "1.0", features = ["profile-with-tracy"], optional = true}
tracing-tracy = {version = "0.10", optional = true}


[dev-dependencies]
criterion = "0.5"


[[bench]]
name = "raycasting_benchmarks"
harness = false
